--- a/geostroy/index.html
+++ b/geostroy/index.html
@@ -73,6 +73,11 @@
                 </nav>
             </div>
         </div>
+        <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <section class="promo">
@@ -82,7 +87,7 @@
                         <h1 class="promo__title">Бурение скважин под ключ</h1>
                         <div class="promo__descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</div>
                         <div class="promo__buttons">
-                            <a href="#" class="btn">Связаться</a>
+                            <a href="#" class="btn btn_big btn_blue">Связаться</a>
                             <a href="#" class="btn btn_big">Калькулятор скважины</a>
                         </div>
                     </div>
@@ -92,7 +97,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services section__offset">
             <div class="container">
                 <div class="section__title">Что мы предлагаем</div>
                 <div class="services__items">
@@ -135,7 +140,7 @@
                 </div>
             </div>
         </section>
-        <section class="discount-promo">
+        <section class="discount-promo section__offset">
             <div class="container">
                 <div class="discount-promo__box">
                     <div class="discount-promo__left">
@@ -149,7 +154,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about section__offset">
             <div class="container">
                 <div class="section__title">О компании</div>
                 <div class="about__box">
@@ -245,7 +250,7 @@
                 </div>
             </div>
         </section>
-        <section class="advantage">
+        <section class="advantage section__offset">
             <div class="container">
                 <div class="section__title">Почему нам доверяют</div>
                 <div class="advantage__items">
@@ -294,7 +299,7 @@
                 </div>
             </div>
         </section>
-        <section class="action">
+        <section class="action section__offset">
             <div class="container">
                 <div class="action__box">
                     <div class="action__title">Заказать бурение скважины</div>
@@ -307,7 +312,7 @@
                 </div>
             </div>
         </section>
-        <section class="works">
+        <section class="works section__offset">
             <div class="container">
                 <div class="section__title">Выполненные работы</div>
                 <div class="works__box">
@@ -521,7 +526,7 @@
                 </div>
             </div>
         </section>
-        <section class="reviews">
+        <section class="reviews section__offset">
             <div class="container">
                 <div class="section__title">Отзывы клиентов</div>
                 <div class="reviews__items reviews__slider">
@@ -629,7 +634,7 @@
                 </div>
             </div>
         </section>
-        <section class="question">
+        <section class="question section__offset">
             <div class="container">
                 <div class="question__box">
                     <div class="question__title">Остались вопросы?</div>
