--- a/geostroy/reviews.html
+++ b/geostroy/reviews.html
@@ -101,10 +101,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -120,10 +119,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -139,10 +137,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -158,10 +155,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -177,10 +173,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -196,10 +191,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -215,10 +209,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -234,10 +227,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -253,10 +245,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -272,10 +263,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -291,10 +281,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
@@ -310,10 +299,9 @@
                             <span class="reviews__star"></span>
                             <span class="reviews__star"></span>
                         </div>
-                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the
-                            Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
+                        <div class="reviews__text">Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since theLorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...Lorem Ipsum has been the industry's standard dummy text ever since the Lorem Ipsum has been the industry's standard dummy text ever since the dummy text...</div>
                         <div class="reviews__bottom">
-                            <a href="#" class="reviews__readmore">Читать полностью</a>
+                            <div class="reviews__readmore">Читать полностью</div>
                             <div class="reviews__date">23.06.2022</div>
                         </div>
                     </div>
