--- a/geostroy/works.html
+++ b/geostroy/works.html
@@ -73,6 +73,11 @@
                 </nav>
             </div>
         </div>
+        <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <nav class="breadcrumb">
@@ -491,7 +496,7 @@
                 </div>
             </div>
         </section>
-        <section class="action">
+        <section class="action section__offset">
             <div class="container">
                 <div class="action__box">
                     <div class="action__title">Заказать бурение скважины</div>
