--- a/geostroy/reviews.html
+++ b/geostroy/reviews.html
@@ -73,6 +73,11 @@
                 </nav>
             </div>
         </div>
+        <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <nav class="breadcrumb">
@@ -309,7 +314,7 @@
                 <a href="#" class="btn btn_readmore">Смотреть ещё</a>
             </div>
         </section>
-        <section class="action">
+        <section class="action section__offset">
             <div class="container">
                 <div class="action__box">
                     <div class="action__title">Заказать бурение скважины</div>
