--- a/geostroy/contacts.html
+++ b/geostroy/contacts.html
@@ -73,6 +73,11 @@
                 </nav>
             </div>
         </div>
+        <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <nav class="breadcrumb">
@@ -87,7 +92,10 @@
         </nav>
         <section class="contacts">
             <div class="container">
-                <div class="section__title section__title_btn">Контакты<a href="#" class="btn">Связаться</a></div>
+                <div class="contacts__title">
+                    <div class="section__title section__title_btn">Контакты</div>
+                    <a href="#" class="btn">Связаться</a>
+                </div>
                 <div class="contacts__map">
                     <img src="img/map.png" alt="#">
                 </div>
