--- a/geostroy/calculator.html
+++ b/geostroy/calculator.html
@@ -73,6 +73,11 @@
                 </nav>
             </div>
         </div>
+        <div class="header__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <main>
         <nav class="breadcrumb">
