--- a/geostroy/index.html
+++ b/geostroy/index.html
@@ -41,7 +41,7 @@
                             <a href="#">Главная</a>
                         </li>
                         <li class="header__submenu">
-                            <a href="#">Услуги</a>
+                            <a href="#submenu">Услуги</a>
                             <ul>
                                 <li>
                                     <a href="#">Бурение скважин</a>
