--- a/mm/article.html
+++ b/mm/article.html
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="css/style.min.css" type="text/css">
     </head>
 <body>
-    <header class="header">
+    <header class="header hide">
         <div class="header__box">
-            <a href="#" class="logo"><img src="img/logo.png" alt="Маргарита Мартын"></a>
+            <a href="#" class="header__logo"><img src="img/logo.png" alt="Маргарита Мартын"></a>
             <div class="header__group">
                 <nav class="header__menu">
                     <ul>
-                        <li><a href="#">Обо мне</a></li>
+                        <li><a href="#" class="active">Обо мне</a></li>
                         <li><a href="#">Консультации</a></li>
                         <li><a href="#">Блог</a></li>
                         <li><a href="#">Контакты</a></li>
@@ -43,6 +43,11 @@
                     </a>
                 </div>
             </div>
+            <div class="header__burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
     <main>
@@ -58,14 +63,14 @@
                         </li>
                         <li class="breadcrumb__item active">1</li>
                     </ul>
-                    <div class="article__title">Consulting Fees Study 2019 (And How To Raise Your Rates)</div>
+                    <h1 class="article__title">Consulting Fees Study 2019 (And How To Raise Your Rates)</h1>
                     <div class="article__img"><img src="img/article-img.png" alt="#"></div>
                     <div class="article__text">
                         <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line. Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                     </div>
                     <div class="article__quote">Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.</div>
-                    <div class="article__subtitle">Consulting Fees Study 2019</div>
+                    <h2 class="article__subtitle">Consulting Fees Study 2019</h2>
                     <div class="article__text">
                         <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service. Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services vis-a-vis cutting-edge deliverables. Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products.</p>
                         <p>Palo santo thundercats fingerstache man braid lomo, hashtag poke forage DIY keytar tilde. Letterpress poke kogi skateboard. Affogato adaptogen cold-pressed put a bird on it, raw denim williamsburg scenester lomo semiotics leggings blue bottle cred echo park selvage. Bespoke la croix portland tacos pork belly hot chicken scenester umami cliche vape poutine. PBR&B pickled wayfarers tilde. Wayfarers biodiesel helvetica yr meh. Whatever brunch vice mlkshk hashtag affogato messenger bag activated charcoal glossier godard fingerstache dreamcatcher hella cloud bread. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
@@ -125,8 +130,24 @@
     <footer class="footer section__offset">
         <div class="contain">
             <div class="footer__box">
-                <div class="footer__left">
+                <div class="footer__top">
                     <a href="#" class="footer__logo"><img src="img/footer-logo.png" alt="Маргарита Мартын"></a>
+                    <div class="footer__links">
+                        <ul class="footer__menu">
+                            <li><a href="#">Обо мне</a></li>
+                            <li><a href="#">Консультации</a></li>
+                            <li><a href="#">Блог</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                        <ul class="footer__questions">
+                            <li>Как проходит <span class="text-pink">процесс терапии?</span></li>
+                            <li><span class="text-pink">Сколько консультаций</span> нужно?</li>
+                            <li>Что лучше - <span class="text-pink">онлайн или лично?</span></li>
+                            <li><span class="text-pink">Как выбрать</span> себе психолога?</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__bottom">
                     <div class="footer__social">
                         <div class="footer__text">Остаёмся на связи</div>
                         <div class="footer__social__items">
@@ -152,42 +173,28 @@
                         </div>
                     </div>
                     <div class="footer__consult">
-                        <div class="footer__text">
-                            Очные консультации в Санкт-Петербурге: <br>
-                            ст.м. «Гостиный двор» <br>
-                            Бизнес-центр «Психолог» ул. Думская, д.5
+                        <div class="footer__group">
+                            <div class="footer__text">
+                                Очные консультации в Санкт-Петербурге: <br>
+                                ст.м. «Гостиный двор» <br>
+                                Бизнес-центр «Психолог» ул. Думская, д.5
+                            </div>
+                            <a href="#" class="footer__whatsapp">
+                                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16 32C24.8365 32 32 24.8365 32 16C32 7.16347 24.8365 0 16 0C7.16347 0 0 7.16347 0 16C0 24.8365 7.16347 32 16 32Z" fill="white"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5274 24.9017H16.5235C14.9312 24.9012 13.3665 24.5016 11.9769 23.7436L6.93335 25.0667L8.28308 20.1366C7.45048 18.6937 7.01242 17.057 7.01308 15.3802C7.01522 10.1345 11.2832 5.8667 16.5273 5.8667C19.0724 5.8678 21.4612 6.85864 23.2575 8.65697C25.0538 10.4552 26.0424 12.8456 26.0414 15.3877C26.0394 20.6322 21.773 24.8996 16.5274 24.9017ZM12.2106 22.0213L12.4994 22.1926C13.7135 22.9132 15.1052 23.2944 16.5242 23.2949H16.5274C20.8859 23.2949 24.4333 19.7474 24.435 15.3872C24.4359 13.2742 23.6142 11.2874 22.1212 9.79271C20.6282 8.29797 18.6427 7.47437 16.5305 7.47364C12.1686 7.47364 8.62122 11.0208 8.61948 15.3808C8.61888 16.875 9.03695 18.3301 9.82848 19.5891L10.0166 19.8883L9.21768 22.8064L12.2106 22.0213ZM20.9949 17.436C21.1607 17.5162 21.2728 17.5703 21.3206 17.6501C21.38 17.7492 21.38 18.2252 21.182 18.7806C20.9838 19.3359 20.034 19.8427 19.5773 19.9109C19.1678 19.9722 18.6494 19.9977 18.08 19.8167C17.7347 19.7072 17.2919 19.5609 16.7247 19.316C14.4961 18.3536 12.99 16.1936 12.7054 15.7854C12.6854 15.7568 12.6715 15.7368 12.6637 15.7264L12.6618 15.7238C12.536 15.556 11.693 14.4312 11.693 13.2672C11.693 12.1722 12.2309 11.5982 12.4785 11.334C12.4955 11.316 12.5111 11.2993 12.525 11.284C12.743 11.046 13.0005 10.9865 13.1589 10.9865C13.3174 10.9865 13.4761 10.988 13.6146 10.995C13.6317 10.9958 13.6495 10.9957 13.6678 10.9956C13.8063 10.9948 13.9791 10.9938 14.1495 11.403C14.215 11.5605 14.3109 11.794 14.4121 12.0403C14.6166 12.5383 14.8427 13.0886 14.8824 13.1682C14.9419 13.2872 14.9815 13.426 14.9022 13.5846C14.8904 13.6084 14.8793 13.6309 14.8688 13.6524C14.8093 13.7739 14.7656 13.8632 14.6645 13.9812C14.6248 14.0276 14.5837 14.0776 14.5427 14.1276C14.4609 14.2272 14.3792 14.3268 14.308 14.3977C14.1889 14.5162 14.065 14.6448 14.2037 14.8828C14.3424 15.1208 14.8195 15.8993 15.5262 16.5297C16.2859 17.2073 16.9462 17.4937 17.2808 17.6388C17.3462 17.6672 17.3991 17.6902 17.438 17.7096C17.6756 17.8286 17.8142 17.8087 17.9529 17.6501C18.0916 17.4914 18.5472 16.9559 18.7056 16.718C18.8641 16.4801 19.0226 16.5197 19.2405 16.599C19.4585 16.6784 20.6272 17.2534 20.8649 17.3724C20.9113 17.3956 20.9547 17.4166 20.9949 17.436Z" fill="black"/>
+                                </svg>                                
+                                +7 (964) 333-33-33
+                            </a>
+                            <div class="footer__copyright">©2022 Маргарита Мартын. Все права защищены.</div>
                         </div>
-                        <a href="#" class="footer__whatsapp">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M16 32C24.8365 32 32 24.8365 32 16C32 7.16347 24.8365 0 16 0C7.16347 0 0 7.16347 0 16C0 24.8365 7.16347 32 16 32Z" fill="white"/>
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5274 24.9017H16.5235C14.9312 24.9012 13.3665 24.5016 11.9769 23.7436L6.93335 25.0667L8.28308 20.1366C7.45048 18.6937 7.01242 17.057 7.01308 15.3802C7.01522 10.1345 11.2832 5.8667 16.5273 5.8667C19.0724 5.8678 21.4612 6.85864 23.2575 8.65697C25.0538 10.4552 26.0424 12.8456 26.0414 15.3877C26.0394 20.6322 21.773 24.8996 16.5274 24.9017ZM12.2106 22.0213L12.4994 22.1926C13.7135 22.9132 15.1052 23.2944 16.5242 23.2949H16.5274C20.8859 23.2949 24.4333 19.7474 24.435 15.3872C24.4359 13.2742 23.6142 11.2874 22.1212 9.79271C20.6282 8.29797 18.6427 7.47437 16.5305 7.47364C12.1686 7.47364 8.62122 11.0208 8.61948 15.3808C8.61888 16.875 9.03695 18.3301 9.82848 19.5891L10.0166 19.8883L9.21768 22.8064L12.2106 22.0213ZM20.9949 17.436C21.1607 17.5162 21.2728 17.5703 21.3206 17.6501C21.38 17.7492 21.38 18.2252 21.182 18.7806C20.9838 19.3359 20.034 19.8427 19.5773 19.9109C19.1678 19.9722 18.6494 19.9977 18.08 19.8167C17.7347 19.7072 17.2919 19.5609 16.7247 19.316C14.4961 18.3536 12.99 16.1936 12.7054 15.7854C12.6854 15.7568 12.6715 15.7368 12.6637 15.7264L12.6618 15.7238C12.536 15.556 11.693 14.4312 11.693 13.2672C11.693 12.1722 12.2309 11.5982 12.4785 11.334C12.4955 11.316 12.5111 11.2993 12.525 11.284C12.743 11.046 13.0005 10.9865 13.1589 10.9865C13.3174 10.9865 13.4761 10.988 13.6146 10.995C13.6317 10.9958 13.6495 10.9957 13.6678 10.9956C13.8063 10.9948 13.9791 10.9938 14.1495 11.403C14.215 11.5605 14.3109 11.794 14.4121 12.0403C14.6166 12.5383 14.8427 13.0886 14.8824 13.1682C14.9419 13.2872 14.9815 13.426 14.9022 13.5846C14.8904 13.6084 14.8793 13.6309 14.8688 13.6524C14.8093 13.7739 14.7656 13.8632 14.6645 13.9812C14.6248 14.0276 14.5837 14.0776 14.5427 14.1276C14.4609 14.2272 14.3792 14.3268 14.308 14.3977C14.1889 14.5162 14.065 14.6448 14.2037 14.8828C14.3424 15.1208 14.8195 15.8993 15.5262 16.5297C16.2859 17.2073 16.9462 17.4937 17.2808 17.6388C17.3462 17.6672 17.3991 17.6902 17.438 17.7096C17.6756 17.8286 17.8142 17.8087 17.9529 17.6501C18.0916 17.4914 18.5472 16.9559 18.7056 16.718C18.8641 16.4801 19.0226 16.5197 19.2405 16.599C19.4585 16.6784 20.6272 17.2534 20.8649 17.3724C20.9113 17.3956 20.9547 17.4166 20.9949 17.436Z" fill="black"/>
-                            </svg>                                
-                            +7 (964) 333-33-33
-                        </a>
-                    </div>
-                    <div class="footer__copyright">©2022 Маргарита Мартын. Все права защищены.</div>
-                </div>
-                <div class="footer__right">
-                    <div class="footer__links">
-                        <ul class="footer__menu">
-                            <li><a href="#">Обо мне</a></li>
-                            <li><a href="#">Консультации</a></li>
-                            <li><a href="#">Блог</a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                        <ul class="footer__questions">
-                            <li>Как проходит <span class="text-pink">процесс терапии?</span></li>
-                            <li><span class="text-pink">Сколько консультаций</span> нужно?</li>
-                            <li>Что лучше - <span class="text-pink">онлайн или лично?</span></li>
-                            <li><span class="text-pink">Как выбрать</span> себе психолога?</li>
-                        </ul>
-                    </div>
-                    <div class="footer__form">
-                        <div class="footer__text">Если оставите свою почту, то раз в месяц смогу присылать дайджест - самое интересное из мира психологии.</div>
-                        <form action="#">
-                            <input type="email" placeholder="E-mail для связи">
-                            <button class="btn btn_mini">Подписаться</button>
-                        </form>
+                        <div class="footer__form">
+                            <div class="footer__text">Если оставите свою почту, то раз в месяц смогу присылать дайджест - самое интересное из мира психологии.</div>
+                            <form action="#">
+                                <input type="email" placeholder="E-mail для связи">
+                                <button class="btn btn_mini">Подписаться</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
