--- a/mm/article.html
+++ b/mm/article.html
@@ -15,7 +15,7 @@
             <div class="header__group">
                 <nav class="header__menu">
                     <ul>
-                        <li><a href="#" class="active">Обо мне</a></li>
+                        <li><a href="#">Обо мне</a></li>
                         <li><a href="#">Консультации</a></li>
                         <li><a href="#">Блог</a></li>
                         <li><a href="#">Контакты</a></li>
