--- a/mm/article.html
+++ b/mm/article.html
@@ -140,10 +140,10 @@
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="footer__questions">
-                            <li>Как проходит <span class="text-pink">процесс терапии?</span></li>
-                            <li><span class="text-pink">Сколько консультаций</span> нужно?</li>
-                            <li>Что лучше - <span class="text-pink">онлайн или лично?</span></li>
-                            <li><span class="text-pink">Как выбрать</span> себе психолога?</li>
+                            <li><a href="#">Как проходит <span class="text-pink">процесс терапии?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Сколько консультаций</span> нужно?</a></li>
+                            <li><a href="#">Что лучше - <span class="text-pink">онлайн или лично?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Как выбрать</span> себе психолога?</a></li>
                         </ul>
                     </div>
                 </div>
