--- a/mm/consultation.html
+++ b/mm/consultation.html
@@ -123,7 +123,7 @@
                             <li>Сверка ожиданий</li>
                             <li class="price__cross">Консультирование</li>
                         </ul>
-                        <button class="btn btn_mini">Подробнее</button>
+                        <button class="btn btn_mini btn_black">Подробнее</button>
                     </div>
                     <div class="price__item price__item_center">
                         <div class="price__icon"><img src="" alt="#"></div>
@@ -135,7 +135,7 @@
                             <li>Конфиденциальность</li>
                             <li class="price__cross">Экстренная поддержка</li>
                         </ul>
-                        <button class="btn btn_mini">Записаться на консультацию</button>
+                        <button class="btn btn_mini btn_white">Записаться на консультацию</button>
                     </div>
                     <div class="price__item">
                         <div class="price__icon"><img src="" alt="#"></div>
@@ -147,7 +147,7 @@
                             <li>Не сгорает</li>
                             <li class="price__cross">Передать другому</li>
                         </ul>
-                        <button class="btn btn_mini">Купить пакет</button>
+                        <button class="btn btn_mini btn_black">Купить пакет</button>
                     </div>
                 </div>
             </div>
@@ -202,10 +202,10 @@
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="footer__questions">
-                            <li>Как проходит <span class="text-pink">процесс терапии?</span></li>
-                            <li><span class="text-pink">Сколько консультаций</span> нужно?</li>
-                            <li>Что лучше - <span class="text-pink">онлайн или лично?</span></li>
-                            <li><span class="text-pink">Как выбрать</span> себе психолога?</li>
+                            <li><a href="#">Как проходит <span class="text-pink">процесс терапии?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Сколько консультаций</span> нужно?</a></li>
+                            <li><a href="#">Что лучше - <span class="text-pink">онлайн или лично?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Как выбрать</span> себе психолога?</a></li>
                         </ul>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                             <div class="footer__text">Если оставите свою почту, то раз в месяц смогу присылать дайджест - самое интересное из мира психологии.</div>
                             <form action="#">
                                 <input type="email" placeholder="E-mail для связи">
-                                <button class="btn btn_mini">Подписаться</button>
+                                <button class="btn btn_mini btn_black">Подписаться</button>
                             </form>
                         </div>
                     </div>
