--- a/mm/contacts.html
+++ b/mm/contacts.html
@@ -128,7 +128,7 @@
                                 <input name="phone" type="text" placeholder="Номер телефона" required>
                             </div>
                             <textarea name="message" placeholder="Сообщение"></textarea>
-                            <button class="btn btn_mini">Отправить</button>
+                            <button class="btn btn_mini btn_black">Отправить</button>
                         </form>
                     </div>
                 </div>
@@ -148,10 +148,10 @@
                             <li><a href="#">Контакты</a></li>
                         </ul>
                         <ul class="footer__questions">
-                            <li>Как проходит <span class="text-pink">процесс терапии?</span></li>
-                            <li><span class="text-pink">Сколько консультаций</span> нужно?</li>
-                            <li>Что лучше - <span class="text-pink">онлайн или лично?</span></li>
-                            <li><span class="text-pink">Как выбрать</span> себе психолога?</li>
+                            <li><a href="#">Как проходит <span class="text-pink">процесс терапии?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Сколько консультаций</span> нужно?</a></li>
+                            <li><a href="#">Что лучше - <span class="text-pink">онлайн или лично?</span></a></li>
+                            <li><a href="#"><span class="text-pink">Как выбрать</span> себе психолога?</a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                             <div class="footer__text">Если оставите свою почту, то раз в месяц смогу присылать дайджест - самое интересное из мира психологии.</div>
                             <form action="#">
                                 <input type="email" placeholder="E-mail для связи">
-                                <button class="btn btn_mini">Подписаться</button>
+                                <button class="btn btn_mini btn_black">Подписаться</button>
                             </form>
                         </div>
                     </div>
